using cursor:default on labels
better than text selector; classier than pointer

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,9 @@ strong.normal{
 strong.choosen{
   color: "red";
 }
-
+.groupings {
+  cursor: default;
+}
 .groupings.selected {
   color: "red";
 }
